# hello

./: .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml  index.html  tailwind.config.ts
fwt_token/: Cargo.toml  diesel.toml
fwt_token/migrations/2025-01-29-023014_create_staking_tables/: down.sql  up.sql
fwt_token/migrations/2025-01-29-025511_create_governance_tables/: down.sql  up.sql
fwt_token/migrations/2025-01-29-025941_create_ai_tables/: down.sql  up.sql
fwt_token/migrations/2025-01-29-030137_create_bridge_tables/: down.sql  up.sql
fwt_token/src/: ai_contract.rs  cross_chain_bridge_contract.rs  governance_contract.rs  lib.rs  schema.rs  staking_contract.rs
webserver/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  fly-develop.toml  fly-pr-preview.toml  fly-prod.toml  fly-staging.toml
webserver/.cargo/: config.toml
webserver/migrations/2024-08-01-222817_create_user_and_tasks/: up.sql
webserver/migrations/2024-08-01-224252_set_default_for_completed/: up.sql
webserver/migrations/2024-08-02-001724_serial_tasks/: down.sql  up.sql
webserver/migrations/2024-08-27-071547_add_email_and_created_at_to_users/: down.sql  up.sql
webserver/migrations/2024-09-05-083042_user_projects/: up.sql
webserver/migrations/2024-10-01-093321_update_tasks_with_user_id/: down.sql  up.sql
webserver/migrations/2024-10-07-074558_create_jobs/: down.sql  up.sql
webserver/migrations/2024-12-18-092817_add_task_assignee_table/: down.sql  up.sql
webserver/migrations/2024-12-18-093638_add_title_and_progess_to_task_table/: down.sql  up.sql
webserver/migrations/2024-12-23-071617_updating_tasks_table/: down.sql  up.sql
webserver/migrations/2025-01-04-141858_adding_sub_tasks/: down.sql  up.sql
webserver/migrations/2025-01-21-141616_add_fields_to_subtasks/: down.sql  up.sql
webserver/migrations/2025-01-25-182152_add_task_id_and_assigned_at_to_subtask_assignees/: down.sql  up.sql
webserver/migrations/2025-01-29-182025_add_task_access/: down.sql  up.sql
webserver/src/: config.rs  db.rs  extractors.rs  macros_local.rs  main.rs  routes.rs  schema.rs  utils.rs
webserver/src/auth/: auth_middleware.rs  error.rs  jwt_auth_service.rs  mod.rs
webserver/src/chat/: chat.rs  chat_routes.rs  chat_server.rs  mod.rs
webserver/src/database/: db.rs  error.rs  mod.rs  test_db.rs
webserver/src/handlers/: auth_handler.rs  error.rs  health_handler.rs  job_handler.rs  linkedin_handler.rs  mod.rs  project_handler.rs  search_handler.rs  sub_tasks_handler.rs  task_handler.rs  user_handler.rs
webserver/src/models/: job.rs  mod.rs  project.rs  sub_tasks.rs  sub_tasks_assignee.rs  task.rs  task_accsses.rs  task_assignee.rs  user.rs
webserver/src/search/: data_sync.rs  (+4 more)
(+164 files in other folders)
