[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
diesel = { version = "2.2.2", features = ["postgres"] }
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
dotenv = "0.15"
env_logger = "0.11.5"
log = "0.4.22"