[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
diesel = { version = "2.2.2", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
dotenv = "0.15"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
actix = "0.13.5"
actix-web-actors = "4.3.0"
actix-cors = "0.7.0"
uuid = { version = "1.10.0", features = ["v4"] }
actix-rt = "2.10.0"
rand = "0.8.5"
actix-files = "0.6.6"
bcrypt = "0.15.1"
env_logger = "0.11.5"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.5"
jsonwebtoken = "9.3.0"
thiserror = "1.0"
actix-service = "2.0.2"
lazy_static = "1.4"
[dev-dependencies]
mockito = "0.30"